--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
 		<nexus-version>1.8.0.1</nexus-version>
 	</properties>
 
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
 	<dependencies>
 
 		<dependency>
@@ -25,15 +33,6 @@
 			<version>1.7.8</version>
 		</dependency>
 
-
-		<!-- Note: there are two sets of dependencies here, the basic (minimal 
-			dependencies needed to build Nexus plugins), and the ITset, that is needed 
-			if you want to write IT tests using real Nexus environment to test your plugins. 
-			If you are using other technique (like having separate module for IT tests), 
-			you can freely remove or just move outside of this module these dependencies. 
-			The ITset of requirements in this POM are put in between "#ITSet BEGINS" 
-			and "#ITSet ENDS" pair of comments. -->
-
 		<!-- Main plugin API, pulling in what is needed -->
 		<dependency>
 			<groupId>org.sonatype.nexus</groupId>
@@ -41,56 +40,7 @@
 			<version>${nexus-version}</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- This dependency is only needed if you want to include REST Resources -->
-		<dependency>
-			<groupId>org.sonatype.nexus</groupId>
-			<artifactId>nexus-rest-api</artifactId>
-			<version>${nexus-version}</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- Basic testing -->
-		<dependency>
-			<groupId>org.sonatype.nexus</groupId>
-			<artifactId>nexus-plugin-test-api</artifactId>
-			<version>${nexus-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.5</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- #ITSet BEGINS -->
-		<!-- Nexus IT setup (dependencies below are needed if you have extensive 
-			ITs and you want to use Nexus Environment) -->
-		<!-- There are plugins connected to this dependency, see below! -->
-		<!-- <dependency> <groupId>org.sonatype.nexus</groupId> <artifactId>nexus-test-harness-launcher</artifactId> 
-			<scope>test</scope> <version>${nexus-version}</version> </dependency> -->
-		<!-- #ITSet ENDS -->
-
 	</dependencies>
-
-	<!-- #ITSet BEGINS -->
-	<!-- Nexus IT setup (dependencies below are needed if you have extensive 
-		ITs and you want to use Nexus Environment) -->
-	<!-- There are plugins and dependencies connected to this import, see below 
-		and above! -->
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.sonatype.nexus</groupId>
-				<artifactId>nexus-webapp-dependencies</artifactId>
-				<version>${nexus-version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-	<!-- #ITSet ENDS -->
 
 	<description>Adds a scheduled task to remove artifacts from a repository based on regular expression matching.</description>
 	<build>
@@ -100,7 +50,7 @@
 			<plugin>
 				<groupId>org.codehaus.gmaven</groupId>
 				<artifactId>gmaven-plugin</artifactId>
-				<version>1.2</version>
+				<version>1.5</version>
 				<configuration>
 					<providerSelection>1.7</providerSelection>
 				</configuration>
@@ -138,13 +88,13 @@
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>app-lifecycle-maven-plugin</artifactId>
-				<version>1.0</version>
+				<version>1.7</version>
 				<extensions>true</extensions>
 				<dependencies>
 					<dependency>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>app-lifecycle-nexus</artifactId>
-						<version>1.0</version>
+						<version>1.7</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -152,26 +102,12 @@
 			<!-- Have to set source level to Java5, we use annotations -->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0.2</version>
+				<version>3.8.0</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
 				</configuration>
 			</plugin>
-
-			<!-- #ITSet BEGINS -->
-			<!-- Nexus IT setup (dependencies below are needed if you have extensive 
-				ITs and you want to use Nexus Environment) -->
-			<!-- There are dependencies connected to this set of plugin, see above! -->
-			<!-- <plugin> <groupId>org.sonatype.plugins</groupId> <artifactId>nexus-test-environment-maven-plugin</artifactId> 
-				<version>1.6</version> <executions> <execution> <goals> <goal>setup-nexus-plugin-environment</goal> 
-				</goals> </execution> </executions> <configuration> <nexusVersion>${nexus-version}</nexusVersion> 
-				</configuration> </plugin> <plugin> <groupId>org.codehaus.mojo</groupId> 
-				<artifactId>failsafe-maven-plugin</artifactId> <version>2.4.3-alpha-1</version> 
-				<executions> <execution> <goals> <goal>integration-test</goal> <goal>verify</goal> 
-				</goals> </execution> </executions> </plugin> -->
-			<!-- #ITSet ENDS -->
-
 		</plugins>
 	</build>
 
